[package]
name = "httpdate"
version = "0.1.0"
authors = ["Satsuki Ueno <satsukiu@google.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
base64 = "0.13"
hyper = { version = "0.13.4", features = ["stream"] }
hyper-rustls = { version = "0.20.0"}
chrono = "0.4"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
rand = "0.7"
itertools = "0.9"
